--- a/with-app/.eslintignore
+++ b/with-app/.eslintignore
@@ -1,8 +1,3 @@
 node_modules
 next.config.js
-sentry.client.config.js
-sentry.server.config.js
-sentry.edge.config.js
-lint-staged.config.js
-src/**/*.stories.tsx
-src/api/**/*.ts
+public
