--- a/with-app/package.json
+++ b/with-app/package.json
@@ -22,20 +22,28 @@
         "type-coverage": "npx typescript-coverage-report"
     },
     "dependencies": {
+        "@headlessui/react": "1.7.15",
+        "@heroicons/react": "2.0.18",
+        "@nanostores/react": "0.7.1",
+        "@tailwindcss/typography": "0.5.9",
         "@tanstack/react-query": "4.29.12",
         "@tanstack/react-query-devtools": "4.29.12",
         "@zodios/core": "10.9.0",
         "@zodios/react": "10.4.5",
         "axios": "^1.4.0",
         "clsx": "^1.2.1",
+        "dayjs": "1.11.8",
         "dompurify": "3.0.3",
         "lodash": "4.17.21",
         "modern-normalize": "2.0.0",
         "nanoid": "^4.0.2",
+        "nanostores": "0.9.1",
         "next": "13.4.4",
+        "next-themes": "0.2.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-error-boundary": "4.0.9",
+        "react-hook-form": "7.44.3",
         "react-use": "17.4.0",
         "sharp": "0.32.1",
         "zod": "3.21.4"
@@ -59,6 +67,7 @@
         "@typescript-eslint/parser": "^5.59.8",
         "@vitejs/plugin-react": "4.0.0",
         "@vitest/coverage-c8": "0.31.4",
+        "autoprefixer": "10.4.14",
         "commitizen": "4.3.0",
         "cors": "2.8.5",
         "cross-env": "7.0.3",
@@ -73,6 +82,7 @@
         "kill-port": "^2.0.1",
         "lint-staged": "^13.2.2",
         "npm-run-all": "4.1.5",
+        "postcss": "8.4.24",
         "prettier": "^2.8.8",
         "pretty-quick": "3.1.3",
         "react-docgen-typescript": "2.2.2",
@@ -81,6 +91,7 @@
         "storybook-dark-mode": "3.0.0",
         "style-dictionary": "3.8.0",
         "style-loader": "3.3.3",
+        "tailwindcss": "3.3.2",
         "typescript": "5.1.3",
         "typescript-plugin-css-modules": "5.0.1",
         "vite-tsconfig-paths": "4.2.0",
